--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.376.0",
-    "next": "14.2.2",
+    "next": "^14.2.20",
     "next-themes": "^0.3.0",
     "node-emoji": "^2.1.3",
     "react": "^18",
@@ -40,10 +40,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "eslint": "^8",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.1",
+    "prettier": "^3.4.2",
+    "prettier-eslint": "^16.3.0",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^4.9.5"
   }
 }
