--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -42,10 +43,10 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.57.1",
-    "prettier": "^3.4.2",
-    "prettier-eslint": "^16.3.0",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-eslint": "^16.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5"
   }
